--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin:0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .header-back {
@@ -39,4 +40,5 @@ body {
     font-size: 24px;
     color: #f9faf8;
     text-decoration: none;
+    font-weight: bold;
 }
