--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
 
 .big {
     font-size: 48px;
+    font-weight: bolder;
 }
 .sub {
     font-size: 18px;
@@ -75,3 +76,44 @@ body {
     padding: 10%;
     background-color: #e5e7eb;
 }
+
+.section2_title {
+    text-align: center;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+}
+
+.box.total {
+    display: flex;
+    justify-content: center;
+}
+
+.text {
+    display: flex;
+    justify-content: center;
+    flex-direction:column;
+}
+
+.square {
+    display: flex;
+    justify-content: center;
+    border: 3px solid #3882f6;
+    border-radius: 10px;
+    margin-left: 25px;
+    margin-right: 25px;
+    min-width: 100px;
+    max-width: 100px;
+    min-height: 100px;
+    max-height: 100px;
+    justify-content:space-evenly;
+}
+
+
+.subtext {
+    width: 100px;
+    text-align: center;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
